--- a/packages/core/src/styles/_colors.scss
+++ b/packages/core/src/styles/_colors.scss
@@ -129,8 +129,8 @@
     --mining-sdk-table-header-hover-bg: #303030;
     --mining-sdk-table-body-hover-bg: #1d1d1d;
 
-    --mining-sdk-table-table-text-primary: #ffffff80;
-    --mining-sdk-table-table-text-secondary: #ffffffb3;
+    --mining-sdk-table-text-primary: #ffffff80;
+    --mining-sdk-table-text-secondary: #ffffffb3;
 
     /* mining-sdk button tokens (mining-os baseline) */
     --mining-sdk-radius: 0px;
